cmake_minimum_required(VERSION 3.12)
message("${CMAKE_CXX_COMPILER_ID}")
if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    message("clang")
    add_compile_options("-std=c++14")
    add_compile_options("-g")
    add_compile_options(-Wall)
    add_compile_options(-Wextra)
    add_compile_options(-Werror)
    add_compile_options(-pedantic)
    add_compile_options(-pedantic-errors)
elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    message("GNU")
    add_compile_options("-std=c++11")
    add_compile_options("-g")
    add_compile_options(-Wall)
    add_compile_options(-Wextra)
    add_compile_options(-Werror)
    add_compile_options(-pedantic)
    add_compile_options(-pedantic-errors)
elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    message("MSVC Windows")
    add_compile_options("/std:c++14")
    add_compile_options("/W3")
    add_compile_options("/WX")
endif()

add_subdirectory(source/server)
add_subdirectory(source/client)
add_subdirectory(source/mimeParse)
add_subdirectory(source/serverTest)